--- a/app/views/loggedin/how.phtml
+++ b/app/views/loggedin/how.phtml
@@ -22,7 +22,7 @@
   <link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">
 </head>
 <body style="background-image:url('<?=$this->url->getBaseUri()?>/img/svg/bg_layer2.svg'); font-family:mp;">
-<div class="topnav" id="top-nav" style="z-index: 99;">  
+<div class="topnav" id="top-nav" style="z-index: 500;">  
     <a class="home" href="<?=$this->url->getBaseUri()?>">
             <img src="<?=$this->url->getBaseUri()?>/img/svg/logo.svg" alt="booKesma">
         </a>
@@ -59,8 +59,9 @@
                             <div class="col-sm-4 col-xs-12">
                                 <div class="single_mixi_portfolio">
                                     <img src="<?=$this->url->getBaseUri()?>/img/pf01.jpg" alt="" />
-                                    <div class="single_work_overlay">
+                                    <div style="font-family:mp;" class="single_work_overlay">
                                         <h4>Rangga Kusuma Dinata</h4>
+                                        <hr style="margin-left:20%; margin-right:20%; color:black;">
                                         <div class="separator"></div>
                                         <p>05111740000120</p>
                                     </div>
@@ -69,8 +70,9 @@
                             <div class="col-sm-4 col-xs-12">
                                 <div class="single_mixi_portfolio">
                                     <img src="<?=$this->url->getBaseUri()?>/img/pf5.jpg" alt="" />
-                                    <div class="single_work_overlay">
+                                    <div style="font-family:mp;" class="single_work_overlay">
                                         <h4>Safhira Maharani</h4>
+                                        <hr style="margin-left:20%; margin-right:20%; color:black;">
                                         <div class="separator"></div>
                                         <p>05111740000027</p>
                                     </div>
@@ -79,8 +81,9 @@
                             <div class="col-sm-4 col-xs-12">
                                 <div class="single_mixi_portfolio">
                                     <img src="<?=$this->url->getBaseUri()?>/img/pf3.png" alt="" />
-                                    <div class="single_work_overlay">
+                                    <div style="font-family:mp;" class="single_work_overlay">
                                         <h4>I Nyoman Yoga Mahottama</h4>
+                                        <hr style="margin-left:20%; margin-right:20%; color:black;">
                                         <div class="separator"></div>
                                         <p>05111740000159</p>
                                     </div>
