--- a/app/views/loggedout/how.phtml
+++ b/app/views/loggedout/how.phtml
@@ -20,7 +20,7 @@
   <link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">
 </head>
 <body style="background-image:url('<?=$this->url->getBaseUri()?>/img/svg/bg_layer2.svg'); font-family:mp;">
-    <div class="topnav" id="top-nav">
+    <div class="topnav" id="top-nav" style="z-index: 500;>
         <a class="home" href="<?=$this->url->getBaseUri()?>">
             <img src="<?=$this->url->getBaseUri()?>/img/svg/logo.svg" alt="booKesma">
         </a>
@@ -33,8 +33,9 @@
             <img src="<?=$this->url->getBaseUri()?>/img/svg/hamburger-menu.svg" alt="menu">
         </a>
 	</div>
-           <!-- Work Section -->
-           <section id="work" class="work sections">
+
+          <!-- Work Section -->
+          <section id="work" class="work sections">
             <div class="container">
                 <div class="row">
                     <div class="main_mix_content text-center">
@@ -46,8 +47,9 @@
                             <div class="col-sm-4 col-xs-12">
                                 <div class="single_mixi_portfolio">
                                     <img src="<?=$this->url->getBaseUri()?>/img/pf01.jpg" alt="" />
-                                    <div class="single_work_overlay">
+                                    <div style="font-family:mp;" class="single_work_overlay">
                                         <h4>Rangga Kusuma Dinata</h4>
+                                        <hr style="margin-left:20%; margin-right:20%; color:black;">
                                         <div class="separator"></div>
                                         <p>05111740000120</p>
                                     </div>
@@ -56,8 +58,9 @@
                             <div class="col-sm-4 col-xs-12">
                                 <div class="single_mixi_portfolio">
                                     <img src="<?=$this->url->getBaseUri()?>/img/pf5.jpg" alt="" />
-                                    <div class="single_work_overlay">
+                                    <div style="font-family:mp;" class="single_work_overlay">
                                         <h4>Safhira Maharani</h4>
+                                        <hr style="margin-left:20%; margin-right:20%; color:black;">
                                         <div class="separator"></div>
                                         <p>05111740000027</p>
                                     </div>
@@ -66,8 +69,9 @@
                             <div class="col-sm-4 col-xs-12">
                                 <div class="single_mixi_portfolio">
                                     <img src="<?=$this->url->getBaseUri()?>/img/pf3.png" alt="" />
-                                    <div class="single_work_overlay">
+                                    <div style="font-family:mp;" class="single_work_overlay">
                                         <h4>I Nyoman Yoga Mahottama</h4>
+                                        <hr style="margin-left:20%; margin-right:20%; color:black;">
                                         <div class="separator"></div>
                                         <p>05111740000159</p>
                                     </div>
