update halaman admin

--- a/app/views/loggedin/register.phtml
+++ b/app/views/loggedin/register.phtml
@@ -38,7 +38,15 @@
             <img src="<?=$this->url->getBaseUri()?>/img/svg/hamburger-menu.svg" alt="menu">
         </a>
 </div>
-	<br><br><br><br>
+    <br><br><br><br>
+    <div style="margin-left:32%;">               
+  <ul class="pagination" style="margin:0%;">
+    <li><a style="color:white; background-color:#87CEEB; border:2px solid white;" href="<?=$this->url->getBaseuri().'admin'?>">DATA BUKU</a></li>
+    <li><a style="color:white; background-color:#87CEEB;border:2px solid white;" href="<?=$this->url->getBaseuri().'admin/list-register'?>">DATA REGISTER</a></li>
+    <li><a style="color:white; background-color:#87CEEB;border:2px solid white;" href="<?=$this->url->getBaseuri().'admin/list-sumbang'?>">DATA SUMBANG</a></li>
+    <li><a style="color:white; background-color:#87CEEB; border:2px solid white;" href="<?=$this->url->getBaseuri().'admin/list-reservasi'?>">DATA RESERVASI</a></li>
+  </ul>
+</div>
     <div style="width:80%; height:auto; margin-left:10%; background-color: white; border: 3px solid lightblue; font-family:mp;">
         <h1 style="text-align: center;">DATA REGISTER</h1>
         <hr>
@@ -71,6 +79,7 @@
   </table>
         </div>
     </div>
+    <br><br>
 <!-- adding jquery -->
 <script src="<?=$this->url->getBaseUri()?>/js/jquery-3.3.1.js"></script>
 <!-- adding bootstrap -->
