--- a/app/views/loggedout/charity.phtml
+++ b/app/views/loggedout/charity.phtml
@@ -35,7 +35,7 @@
     </div>
 <br><br><br>
 	<div class="container-contact100" >
-		<div class="wrap-contact100">
+		<div style="border:3px solid lightblue;" class="wrap-contact100">
 			<div class="contact100-form-title" style="background-image: url('<?=$this->url->getBaseUri()?>/img/1.jpg');">
 				<span class="contact100-form-title-1">
 					FORM SUMBANG
