--- a/app/views/loggedin/kembali.phtml
+++ b/app/views/loggedin/kembali.phtml
@@ -44,7 +44,7 @@
         </a>
 </div>
 	<div class="container-contact100" >
-		<div class="wrap-contact100">
+		<div style="border:3px solid lightblue;" class="wrap-contact100">
 			<div class="contact100-form-title" style="background-image: url('<?=$this->url->getBaseUri()?>/img/2.jpg');">
 				<span class="contact100-form-title-1">
 					FORM PENGEMBALIAN
