--- a/app/views/loggedin/how.phtml
+++ b/app/views/loggedin/how.phtml
@@ -92,7 +92,7 @@
                 </div>
             </div>
         </section> 
-<div class="container" style="background-color: #FAE3E9;">
+        <div class="container" style="background-color: #FAE3E9;">
   <!-- Trigger the modal with a button -->
   <div style="width:100%; display:inline-table; float:left;">
 	<div style="width:70%; display: inline-table; float:left; padding:3%;">
@@ -100,7 +100,7 @@
 		</button>
 	</div>
 	<div style="width:30%; float:left;padding: 3%;">
-	<h3>Untuk Reservasi kalian bisa mengisi form untuk login terlebih dahulu. Setelah itu, kalian bisa memilih buku sesuai keinginan. Jika terdapat masalah dalam hal pengisian data. Harap hubungi KESMA HMTC.</h3>
+	<h3 style="text-align:justify; padding-top:25%;">Untuk Reservasi kalian bisa mengisi form untuk login terlebih dahulu. Setelah itu, kalian bisa memilih buku sesuai keinginan. Jika terdapat masalah dalam hal pengisian data. Harap hubungi KESMA HMTC.</h3>
 	</div>
   </div>
 </div>
@@ -108,8 +108,8 @@
 <div class="container" style="background-color: #BFDAD5;">
   <!-- Trigger the modal with a button -->
   <div style="width:100%; display:inline-table; float:left;padding:3%;">
-	<div style="width:30%; float:left; padding:3%;">
-	<h3>Untuk Peminjaman kalian bisa mengisi form untuk login terlebih dahulu. Setelah itu, kalian bisa memilih buku sesuai keinginan. Silahkan ambil buku sesuai jadwal janjian dengan pengurus KESMA. Jika terdapat masalah dalam hal pengisian data. Harap hubungi KESMA HMTC.</h3>
+	<div style="width:30%; float:left;">
+	<h3 style="text-align:justify; padding:3% 18% 3% 7%;">Untuk Peminjaman kalian bisa mengisi form untuk login terlebih dahulu. Setelah itu, kalian bisa memilih buku sesuai keinginan. Silahkan ambil buku sesuai jadwal janjian dengan pengurus KESMA. Jika terdapat masalah dalam hal pengisian data. Harap hubungi KESMA HMTC.</h3>
 	</div>
 	<div style="width:70%; display: inline-table; float:left;">
 		<button  style="background: url('https://www.bookabuku.com/file/frontend/images/how-thumbnail-borrow.jpg') no-repeat; width:100%; height:450px; background-position: center; background-size: cover; font-size: 30px; " class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal2" color="black">PEMINJAMAN
@@ -126,7 +126,7 @@
 		</button>
 	</div>
 	<div style="width:30%; float:left; padding:3%;">
-	<h3>Untuk Penyumbangan kalian bisa login terlebih dahulu. Setelah itu, kalian bisa mengisi form Penyumbangan dan mengisi jadwal janjian dengan pengurus KESMA. Jika terdapat masalah dalam hal pengisian data. Harap hubungi KESMA HMTC.</h3>
+	<h3 style="text-align:justify;  padding-top:20%;">Untuk Penyumbangan kalian bisa login terlebih dahulu. Setelah itu, kalian bisa mengisi form Penyumbangan dan mengisi jadwal janjian dengan pengurus KESMA. Jika terdapat masalah dalam hal pengisian data. Harap hubungi KESMA HMTC.</h3>
 	</div>
   </div>
 </div>
