--- a/app/views/loggedout/how.phtml
+++ b/app/views/loggedout/how.phtml
@@ -20,7 +20,7 @@
   <link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">
 </head>
 <body style="background-image:url('<?=$this->url->getBaseUri()?>/img/svg/bg_layer2.svg'); font-family:mp;">
-    <div class="topnav" id="top-nav" style="z-index: 500;>
+    <div class="topnav" id="top-nav">
         <a class="home" href="<?=$this->url->getBaseUri()?>">
             <img src="<?=$this->url->getBaseUri()?>/img/svg/logo.svg" alt="booKesma">
         </a>
@@ -33,9 +33,8 @@
             <img src="<?=$this->url->getBaseUri()?>/img/svg/hamburger-menu.svg" alt="menu">
         </a>
 	</div>
-
-          <!-- Work Section -->
-          <section id="work" class="work sections">
+           <!-- Work Section -->
+           <section id="work" class="work sections">
             <div class="container">
                 <div class="row">
                     <div class="main_mix_content text-center">
@@ -47,9 +46,8 @@
                             <div class="col-sm-4 col-xs-12">
                                 <div class="single_mixi_portfolio">
                                     <img src="<?=$this->url->getBaseUri()?>/img/pf01.jpg" alt="" />
-                                    <div style="font-family:mp;" class="single_work_overlay">
+                                    <div class="single_work_overlay">
                                         <h4>Rangga Kusuma Dinata</h4>
-                                        <hr style="margin-left:20%; margin-right:20%; color:black;">
                                         <div class="separator"></div>
                                         <p>05111740000120</p>
                                     </div>
@@ -58,9 +56,8 @@
                             <div class="col-sm-4 col-xs-12">
                                 <div class="single_mixi_portfolio">
                                     <img src="<?=$this->url->getBaseUri()?>/img/pf5.jpg" alt="" />
-                                    <div style="font-family:mp;" class="single_work_overlay">
+                                    <div class="single_work_overlay">
                                         <h4>Safhira Maharani</h4>
-                                        <hr style="margin-left:20%; margin-right:20%; color:black;">
                                         <div class="separator"></div>
                                         <p>05111740000027</p>
                                     </div>
@@ -69,9 +66,8 @@
                             <div class="col-sm-4 col-xs-12">
                                 <div class="single_mixi_portfolio">
                                     <img src="<?=$this->url->getBaseUri()?>/img/pf3.png" alt="" />
-                                    <div style="font-family:mp;" class="single_work_overlay">
+                                    <div class="single_work_overlay">
                                         <h4>I Nyoman Yoga Mahottama</h4>
-                                        <hr style="margin-left:20%; margin-right:20%; color:black;">
                                         <div class="separator"></div>
                                         <p>05111740000159</p>
                                     </div>
@@ -88,7 +84,7 @@
 		</button>
 	</div>
 	<div style="width:30%; float:left;padding: 3%;">
-	<h3>Untuk Reservasi kalian bisa mengisi form untuk login terlebih dahulu. Setelah itu, kalian bisa memilih buku sesuai keinginan. Jika terdapat masalah dalam hal pengisian data. Harap hubungi KESMA HMTC.</h3>
+	<h3 style="text-align:justify; padding-top:25%;">Untuk Reservasi kalian bisa mengisi form untuk login terlebih dahulu. Setelah itu, kalian bisa memilih buku sesuai keinginan. Jika terdapat masalah dalam hal pengisian data. Harap hubungi KESMA HMTC.</h3>
 	</div>
   </div>
 </div>
@@ -96,8 +92,8 @@
 <div class="container" style="background-color: #BFDAD5;">
   <!-- Trigger the modal with a button -->
   <div style="width:100%; display:inline-table; float:left;padding:3%;">
-	<div style="width:30%; float:left; padding:3%;">
-	<h3>Untuk Peminjaman kalian bisa mengisi form untuk login terlebih dahulu. Setelah itu, kalian bisa memilih buku sesuai keinginan. Silahkan ambil buku sesuai jadwal janjian dengan pengurus KESMA. Jika terdapat masalah dalam hal pengisian data. Harap hubungi KESMA HMTC.</h3>
+	<div style="width:30%; float:left;">
+	<h3 style="text-align:justify; padding:3% 18% 3% 7%;">Untuk Peminjaman kalian bisa mengisi form untuk login terlebih dahulu. Setelah itu, kalian bisa memilih buku sesuai keinginan. Silahkan ambil buku sesuai jadwal janjian dengan pengurus KESMA. Jika terdapat masalah dalam hal pengisian data. Harap hubungi KESMA HMTC.</h3>
 	</div>
 	<div style="width:70%; display: inline-table; float:left;">
 		<button  style="background: url('https://www.bookabuku.com/file/frontend/images/how-thumbnail-borrow.jpg') no-repeat; width:100%; height:450px; background-position: center; background-size: cover; font-size: 30px; " class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal2" color="black">PEMINJAMAN
@@ -114,7 +110,7 @@
 		</button>
 	</div>
 	<div style="width:30%; float:left; padding:3%;">
-	<h3>Untuk Penyumbangan kalian bisa login terlebih dahulu. Setelah itu, kalian bisa mengisi form Penyumbangan dan mengisi jadwal janjian dengan pengurus KESMA. Jika terdapat masalah dalam hal pengisian data. Harap hubungi KESMA HMTC.</h3>
+	<h3 style="text-align:justify;  padding-top:20%;">Untuk Penyumbangan kalian bisa login terlebih dahulu. Setelah itu, kalian bisa mengisi form Penyumbangan dan mengisi jadwal janjian dengan pengurus KESMA. Jika terdapat masalah dalam hal pengisian data. Harap hubungi KESMA HMTC.</h3>
 	</div>
   </div>
 </div>
