--- a/app/views/loggedout/how.phtml
+++ b/app/views/loggedout/how.phtml
@@ -46,8 +46,9 @@
                             <div class="col-sm-4 col-xs-12">
                                 <div class="single_mixi_portfolio">
                                     <img src="<?=$this->url->getBaseUri()?>/img/pf01.jpg" alt="" />
-                                    <div class="single_work_overlay">
+                                    <div style="font-family:mp;" class="single_work_overlay">
                                         <h4>Rangga Kusuma Dinata</h4>
+                                        <hr style="margin-left:20%; margin-right:20%; color:black;">
                                         <div class="separator"></div>
                                         <p>05111740000120</p>
                                     </div>
@@ -56,8 +57,9 @@
                             <div class="col-sm-4 col-xs-12">
                                 <div class="single_mixi_portfolio">
                                     <img src="<?=$this->url->getBaseUri()?>/img/pf5.jpg" alt="" />
-                                    <div class="single_work_overlay">
+                                    <div style="font-family:mp;" class="single_work_overlay">
                                         <h4>Safhira Maharani</h4>
+                                        <hr style="margin-left:20%; margin-right:20%; color:black;">
                                         <div class="separator"></div>
                                         <p>05111740000027</p>
                                     </div>
@@ -66,8 +68,9 @@
                             <div class="col-sm-4 col-xs-12">
                                 <div class="single_mixi_portfolio">
                                     <img src="<?=$this->url->getBaseUri()?>/img/pf3.png" alt="" />
-                                    <div class="single_work_overlay">
+                                    <div style="font-family:mp;" class="single_work_overlay">
                                         <h4>I Nyoman Yoga Mahottama</h4>
+                                        <hr style="margin-left:20%; margin-right:20%; color:black;">
                                         <div class="separator"></div>
                                         <p>05111740000159</p>
                                     </div>
