--- a/app/views/index/show.phtml
+++ b/app/views/index/show.phtml
@@ -26,7 +26,7 @@
     <script type="text/javascript" src="<?=$this->url->getBaseUri()?>/js/chat.js"></script>
     <link rel="stylesheet" type="text/css" media="screen" href="<?=$this->url->getBaseUri()?>/css/efek.css" />
 </head>
-<body style="background-image: url('img/svg/bg_layer1.svg')">
+<body style="background-image: url('img/svg/bg_layer1.svg'); ">
     <div class="topnav" id="top-nav" style="z-index: 99;">
         <a class="home" href="<?=$this->url->getBaseUri()?>">
             <img src="<?=$this->url->getBaseUri()?>/img/svg/logo.svg" alt="booKesma">
