--- a/app/views/index/show.phtml
+++ b/app/views/index/show.phtml
@@ -26,7 +26,7 @@
     <script type="text/javascript" src="<?=$this->url->getBaseUri()?>/js/chat.js"></script>
     <link rel="stylesheet" type="text/css" media="screen" href="<?=$this->url->getBaseUri()?>/css/efek.css" />
 </head>
-<body style="background-image: url('img/svg/bg_layer1.svg')">
+<body style="background-image: url('img/svg/bg_layer1.svg'); ">
     <div class="topnav" id="top-nav" style="z-index: 99;">
         <a class="home" href="<?=$this->url->getBaseUri()?>">
             <img src="<?=$this->url->getBaseUri()?>/img/svg/logo.svg" alt="booKesma">
@@ -228,16 +228,12 @@ Membawaku terbang ke taman-taman pengetahuan paling menawan, melintasi waktu dan
   <div class="row">
     <div class="col-sm-2">
     </div>
-    <div class="col-sm-8" style="padding-right:10%; text-align: center;">
-    <h1 style="font-family: mp; font-size:30px;"><b>-OUR MEDIA SOCIAL-</b></h1>
+    <div class="col-sm-8" style="padding-right:10%; text-align: center; padding-bottom:2%; padding-top:2%;">
+    <h1 style="font-family: as; font-size:35px;"><b>OUR MEDIA SOCIAL</b></h1>
+    <hr style="width:50%; border:1px solid white;">
     <img src="<?=$this->url->getBaseUri()?>/img/jpgpng/icon-facebook.png" style="width: 5%;">
     <img src="<?=$this->url->getBaseUri()?>/img/jpgpng/icon-mail.png" style="width: 5%;">
     <img src="<?=$this->url->getBaseUri()?>/img/jpgpng/icon-twitter.png" style="width: 5%;">
-    <br>
-    <h3>Kategori Buku</h3>
-    <h3>Bagaimana?</h3>
-    </div>
-    <div class="col-sm-2" style="">
     </div>
   </div>
 </div>
