--- a/app/views/loggedin/how.phtml
+++ b/app/views/loggedin/how.phtml
@@ -22,8 +22,8 @@
   <link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">
 </head>
 <body style="background-image:url('<?=$this->url->getBaseUri()?>/img/svg/bg_layer2.svg'); font-family:mp;">
-  <div class="topnav" id="top-nav">
-        <a class="home" href="<?=$this->url->getBaseUri()?>">
+<div class="topnav" id="top-nav" style="z-index: 500;">  
+    <a class="home" href="<?=$this->url->getBaseUri()?>">
             <img src="<?=$this->url->getBaseUri()?>/img/svg/logo.svg" alt="booKesma">
         </a>
         <a style="text-decoration: none;" href="<?=$this->url->getBaseuri().'logout'?>">Keluar</a>
@@ -32,12 +32,20 @@
         <a style="text-decoration: none;" href="<?=$this->url->getBaseuri().'koleksi'?>">Koleksi</a>
         <a style="text-decoration: none;" href="<?=$this->url->getBaseuri().'bagaimana'?>">Bagaimana</a>
         <a style="text-decoration: none;" href="<?=$this->url->getBaseuri().'sumbang'?>">Sumbang</a>
+        <a style="text-decoration: none;" href="<?=$this->url->getBaseuri().'user/chat'?>">Chatting</a>
+        <?php
+            $role = $this->session->get('auth')['s_role'];
+            if ($role==="admin") {
+        ?>
+        <a style="text-decoration: none;" href="<?=$this->url->getBaseuri().'admin'?>">Admin</a>
+        <?php
+            }
+        ?>
         <a href="javascript:void(0);" class="icon" onclick="navbar()">
             <img src="<?=$this->url->getBaseUri()?>/img/svg/hamburger-menu.svg" alt="menu">
         </a>
-	</div>
+</div>
 
-          <!-- Work Section -->
           <section id="work" class="work sections">
             <div class="container">
                 <div class="row">
@@ -50,8 +58,9 @@
                             <div class="col-sm-4 col-xs-12">
                                 <div class="single_mixi_portfolio">
                                     <img src="<?=$this->url->getBaseUri()?>/img/pf01.jpg" alt="" />
-                                    <div class="single_work_overlay">
+                                    <div style="font-family:mp;" class="single_work_overlay">
                                         <h4>Rangga Kusuma Dinata</h4>
+                                        <hr style="margin-left:20%; margin-right:20%; color:black;">
                                         <div class="separator"></div>
                                         <p>05111740000120</p>
                                     </div>
@@ -60,8 +69,9 @@
                             <div class="col-sm-4 col-xs-12">
                                 <div class="single_mixi_portfolio">
                                     <img src="<?=$this->url->getBaseUri()?>/img/pf5.jpg" alt="" />
-                                    <div class="single_work_overlay">
+                                    <div style="font-family:mp;" class="single_work_overlay">
                                         <h4>Safhira Maharani</h4>
+                                        <hr style="margin-left:20%; margin-right:20%; color:black;">
                                         <div class="separator"></div>
                                         <p>05111740000027</p>
                                     </div>
@@ -70,8 +80,9 @@
                             <div class="col-sm-4 col-xs-12">
                                 <div class="single_mixi_portfolio">
                                     <img src="<?=$this->url->getBaseUri()?>/img/pf3.png" alt="" />
-                                    <div class="single_work_overlay">
+                                    <div style="font-family:mp;" class="single_work_overlay">
                                         <h4>I Nyoman Yoga Mahottama</h4>
+                                        <hr style="margin-left:20%; margin-right:20%; color:black;">
                                         <div class="separator"></div>
                                         <p>05111740000159</p>
                                     </div>
@@ -80,24 +91,23 @@
                 </div>
             </div>
         </section> 
-<div class="container" style="background-color: #FAE3E9;">
-  <!-- Trigger the modal with a button -->
+        <div class="container" style="background-color: #FAE3E9;">
+
   <div style="width:100%; display:inline-table; float:left;">
 	<div style="width:70%; display: inline-table; float:left; padding:3%;">
 		<button  style="background: url('https://www.bookabuku.com/file/frontend/images/how-thumbnail-subscribe.jpg') no-repeat; width:100%; height:450px;; background-position: center; background-size: cover; font-size: 30px;" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal" color="black">RESERVASI
 		</button>
 	</div>
 	<div style="width:30%; float:left;padding: 3%;">
-	<h3>Untuk Reservasi kalian bisa mengisi form untuk login terlebih dahulu. Setelah itu, kalian bisa memilih buku sesuai keinginan. Jika terdapat masalah dalam hal pengisian data. Harap hubungi KESMA HMTC.</h3>
+	<h3 style="text-align:justify; padding-top:25%;">Untuk Reservasi kalian bisa mengisi form untuk login terlebih dahulu. Setelah itu, kalian bisa memilih buku sesuai keinginan. Jika terdapat masalah dalam hal pengisian data. Harap hubungi KESMA HMTC.</h3>
 	</div>
   </div>
 </div>
 <br><br>
 <div class="container" style="background-color: #BFDAD5;">
-  <!-- Trigger the modal with a button -->
   <div style="width:100%; display:inline-table; float:left;padding:3%;">
-	<div style="width:30%; float:left; padding:3%;">
-	<h3>Untuk Peminjaman kalian bisa mengisi form untuk login terlebih dahulu. Setelah itu, kalian bisa memilih buku sesuai keinginan. Silahkan ambil buku sesuai jadwal janjian dengan pengurus KESMA. Jika terdapat masalah dalam hal pengisian data. Harap hubungi KESMA HMTC.</h3>
+	<div style="width:30%; float:left;">
+	<h3 style="text-align:justify; padding:3% 18% 3% 7%;">Untuk Peminjaman kalian bisa mengisi form untuk login terlebih dahulu. Setelah itu, kalian bisa memilih buku sesuai keinginan. Silahkan ambil buku sesuai jadwal janjian dengan pengurus KESMA. Jika terdapat masalah dalam hal pengisian data. Harap hubungi KESMA HMTC.</h3>
 	</div>
 	<div style="width:70%; display: inline-table; float:left;">
 		<button  style="background: url('https://www.bookabuku.com/file/frontend/images/how-thumbnail-borrow.jpg') no-repeat; width:100%; height:450px; background-position: center; background-size: cover; font-size: 30px; " class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal2" color="black">PEMINJAMAN
@@ -107,14 +117,13 @@
 </div>
 <br><br>
 <div class="container" style="background-color: #FAE3E9;">
-  <!-- Trigger the modal with a button -->
   <div style="width:100%; display:inline-table; float:left;">
   <div style="width:70%; display: inline-table; float:left;padding:3%;">
 		<button  style="background: url('https://www.bookabuku.com/file/frontend/images/how-thumbnail-lend.jpg') no-repeat; width:100%; height:450px; background-position: center; background-size: cover; font-size: 30px; " class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal3" color="black">PENYUMBANGAN
 		</button>
 	</div>
 	<div style="width:30%; float:left; padding:3%;">
-	<h3>Untuk Penyumbangan kalian bisa login terlebih dahulu. Setelah itu, kalian bisa mengisi form Penyumbangan dan mengisi jadwal janjian dengan pengurus KESMA. Jika terdapat masalah dalam hal pengisian data. Harap hubungi KESMA HMTC.</h3>
+	<h3 style="text-align:justify;  padding-top:20%;">Untuk Penyumbangan kalian bisa login terlebih dahulu. Setelah itu, kalian bisa mengisi form Penyumbangan dan mengisi jadwal janjian dengan pengurus KESMA. Jika terdapat masalah dalam hal pengisian data. Harap hubungi KESMA HMTC.</h3>
 	</div>
   </div>
 </div>
